Style css update: footer style corrected: Alignment

--- a/Rosario-Herald-Style.css
+++ b/Rosario-Herald-Style.css
@@ -322,5 +322,7 @@ footer .Copyright {
     color: navy;
     font-weight: 700;
     font-size: 2vh;
-    padding-top: 2vh;
+    text-align: center;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
 }
